tests/fixtures/wyst/wync/tests/fixtures/syntax-corpus/negative/generic-value-argument.wyst
module syntax_bad_generic_value

struct Box<T> {
  value: T
}

const bad: Box<u64, 4> = 0
